# Django-Google-APIs

./: .gitlab-ci.yml  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
django_google_api_project/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
static/: google_maps.js  google_places.js  google_places_waypoints.js  main.css  main.js
templates/: base.html
templates/partials/: logo.html  nav.html
templates/users/: account.html  profile.html  sign_in.html  sign_up.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
