[tool.poetry]
name = "django-google-apis"
version = "0.1.0"
description = ""
authors = ["juancamilosuarez3 <juancamilosuarez3@gmail.com>"]
readme = "README.md"
packages = [{include = "django_google_apis"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
python-dotenv = "0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
