[tool.poetry]
name = "django-google-apis"
version = "0.1.0"
description = ""
authors = ["juancamilosuarez3 <juancamilosuarez3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
python-dotenv = "0.21.0"
requests = "^2.28.2"
humanfriendly = "^10.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "23.1.0"
click = "^8.1.3"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
